fix styling issues on iOS

--- a/src/components/GameListPage/gameListPageFilters.scss
+++ b/src/components/GameListPage/gameListPageFilters.scss
@@ -1,6 +1,6 @@
 .c-game-list-page-filters__main-button-bg {
   background: linear-gradient(
-    rgba(0, 0, 0, 0),
+    rgba(255, 255, 255, 0),
     cudl-palette(white, "base") 30%
   );
 }
